	Likewise.
	* nptl/sysdeps/unix/sysv/linux/sparc/sparc64/timer_create.c:
	Likewise.
	* nptl/sysdeps/unix/sysv/linux/sparc/sparc64/timer_delete.c:
	Likewise.
	* nptl/sysdeps/unix/sysv/linux/sparc/sparc64/timer_getoverr.c:
	Likewise.
	* nptl/sysdeps/unix/sysv/linux/sparc/sparc64/timer_gettime.c:
	Likewise.
	* nptl/sysdeps/unix/sysv/linux/sparc/sparc64/timer_settime.c:
	Likewise.

	* sysdeps/unix/sysv/linux/x86_64/clone.S: Deconditionalize the code
	that was previously under [RESET_PID].
	* sysdeps/unix/sysv/linux/i386/clone.S: Likewise.
	* nptl/sysdeps/unix/sysv/linux/x86_64/clone.S: File removed.
	* nptl/sysdeps/unix/sysv/linux/i386/clone.S: File removed.

	* sysdeps/i386/nptl/Implies: New file.
	* sysdeps/x86_64/nptl/Implies: New file.
	* nptl/sysdeps/unix/sysv/linux/x86/bits/pthreadtypes.h: Moved ...
	* sysdeps/x86/nptl/bits/pthreadtypes.h: ... here.
	* nptl/sysdeps/unix/sysv/linux/x86/bits/semaphore.h: Moved ...
	* sysdeps/x86/nptl/bits/semaphore.h: ... here.

	* sysdeps/unix/sysv/linux/i386/vfork.S: Include <tcb-offsets.h>.
	(__vfork): Incorporate save/restore of PID from nptl/vfork.S here.
	(__libc_vfork): New strong alias.
	* nptl/sysdeps/unix/sysv/linux/i386/vfork.S: File removed.
	* nptl/sysdeps/unix/sysv/linux/i386/pt-vfork.S: File removed.

	* sysdeps/unix/sysv/linux/x86_64/vfork.S: Include <tcb-offsets.h>.
	(__vfork): Incorporate save/restore of PID from nptl/vfork.S here.
	(__libc_vfork): New strong alias.
	* nptl/sysdeps/unix/sysv/linux/x86_64/vfork.S: File removed.
	* nptl/sysdeps/unix/sysv/linux/x86_64/pt-vfork.S: File removed.

	* sysdeps/unix/sysv/linux/arm/vfork.S: Include <tcb-offsets.h>.
	(__vfork): Incorporate save/restore of PID from nptl/vfork.S here.
	(__libc_vfork): New strong alias.
	* sysdeps/unix/sysv/linux/arm/nptl/vfork.S: File removed.
	* sysdeps/unix/sysv/linux/arm/nptl/pt-vfork.S: File removed.
	* nptl/pt-vfork.c: New file.
	* nptl/Versions (libc: GLIBC_PRIVATE): Add __libc_vfork.
	(libpthread: GLIBC_2.20): New version set (empty).
