@@ -1,1 +1,1 @@
-#include "../x86_64/timer_delete.c"
+#include <sysdeps/unix/sysv/linux/x86_64/timer_delete.c>
