@@ -37,6 +37,11 @@
 	Likewise.
 	* nptl/sysdeps/unix/sysv/linux/sparc/sparc64/timer_settime.c:
 	Likewise.
+	* nptl/sysdeps/unix/sysv/linux/s390/s390-64/timer_create.c: Likewise.
+	* nptl/sysdeps/unix/sysv/linux/s390/s390-64/timer_delete.c: Likewise.
+	* nptl/sysdeps/unix/sysv/linux/s390/s390-64/timer_getoverr.c: Likewise.
+	* nptl/sysdeps/unix/sysv/linux/s390/s390-64/timer_gettime.c: Likewise.
+	* nptl/sysdeps/unix/sysv/linux/s390/s390-64/timer_settime.c: Likewise.
 
 	* sysdeps/unix/sysv/linux/x86_64/clone.S: Deconditionalize the code
 	that was previously under [RESET_PID].
